[package]
name = "tree-sitter-c-parse"
version = "0.1.0"
authors = ["Istvan Csaszar <icsaszar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.16.1"
rayon = "1.3.1"
ignore = "0.4.16"

[build-dependencies]
cc = "1.0.58"